--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,61 @@
 .App {
   text-align: center;
+  height: 100vh;
+  min-height: 600px;
+  position: relative;
+}
+
+.App:before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.5;
+  z-index: 1;
+}
+
+.content {
+  position: relative;
+  z-index: 2;
+}
+
+header {
+  padding: 120px 20px 50px;
+}
+
+.box {
+  background: #ff6262;
+  width: 800px;
+  max-width: 95%;
+  margin: 0 auto 40px;
+  padding: 65px 10px 70px;
+  border-radius: 8px;
+}
+
+.box p {
+  margin: 0 0 20px;
+}
+input {
+  width: 80%;
+  border-radius: 6px;
+  padding: 15px 25px;
+  background: #eee;
+  border: 1px solid #777;
+  font-size: 24px;
+}
+
+.result p {
+  font-size: 50px;
+  font-style: italic;
+  font-weight: 400;
+  margin: 0;
+}
+
+.result h4 {
+  font-size: 18px;
+  margin-bottom: 10px;
 }
