--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding: 60px 20px;
   height: 100vh;
   min-height: 600px;
   position: relative;
@@ -8,7 +9,7 @@
 .App:before {
   content: '';
   display: block;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
@@ -24,7 +25,7 @@
 }
 
 header {
-  padding: 120px 20px 50px;
+  padding: 50px 20px 50px;
 }
 
 .box {
@@ -69,6 +70,10 @@ input.spin {
 }
 
 @media(max-width: 640px) {
+  .App {
+    padding: 20px 10px;
+  }
+
   header {
     padding: 20px 20px 25px;
   }
